<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Trishula is back bitches!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="name" >Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="save">Save</string>
    <string name="adicionar">Add</string>
    <string name="required_field">Required field</string>
    <string name="success">Success!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Do you wish to delete?</string>
    <string name="confirm">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cep">Zip Code</string>
    <string name="find">Find</string>
    <string name="loading">Loading...</string>
    <string name="tipoLogradouro">Type</string>
    <string name="logradouro">Street</string>
    <string name="bairro">Neighborhood</string>
    <string name="cidade">City</string>
    <string name="estado">State</string>
</resources>
